--- a/Languages/EN.json
+++ b/Languages/EN.json
@@ -5,51 +5,51 @@
 	"LANGCODE": "en",
 	"STRINGS": {
 		"updater": {
-			"UPDATE": "*Your bot is already on latest version Bro*",
-			"NEW_UPDATE": "*There is a new update available for the bot!*\n\n*Changes:*\n",
-			"UPDATED_LOCAL": "*Successfully Updated!*"
+			"UPDATE": "*الروبوت الخاص بك موجود بالفعل في أحدث إصدار برو*",
+			"NEW_UPDATE": "*هناك تحديث جديد متاح للروبوت!*\n\n*التغييرات:*\n",
+			"UPDATED_LOCAL": "*تم التحديث بنجاح!*"
 		},
 		"global": {
-			"botName": " Powered by Astro-MD",
+			"botName": " ♣️《بوت رايلي》♦️",
 			"body": "𝑊ℎ𝑎𝑡𝑠𝑎𝑝𝑝 𝐵𝑜𝑡",
-			"greet2" : "Bro",
-			"pic1": "https://raw.githubusercontent.com/vihangayt0/server-/main/Astroboy.jpg",
-			"pic2": "https://raw.githubusercontent.com/vihangayt0/server-/main/Astroboy.jpg",
-			"pic3": "https://raw.githubusercontent.com/vihangayt0/server-/main/Astroboy.jpg",
-			"pic4": "https://raw.githubusercontent.com/vihangayt0/server-/main/Astroboy.jpg",
-			"pic5": "https://raw.githubusercontent.com/vihangayt0/server-/main/Astroboy.jpg",
-			"pic6": "https://raw.githubusercontent.com/vihangayt0/server-/main/Astroboy.jpg",
-			"pic7": "https://raw.githubusercontent.com/vihangayt0/server-/main/Astroboy.jpg",
-			 "greet" : "Bro",
-		   "dotbody" : "I'm Alive.",
-			"promote": "Admin Role Given to my Darling",
-			"pmallow": "*Hii,This is Astro-MD*\n*An assistant of My Master.*\nMy Master is busy right now.\nKindly Leave your Message.\n\n_I will inform him about your message asap......_",
-			"pmblock": "❌ Blocked*\n\n You have been blocked for spamming.\n\n _ Powered by Astro-MD_",
-			"pmwarn": "✋Hii* \nPlease don't spam else I'll block you for spamming. _You have ${checkPermit.times} warning(s)._\n\n *Powered by Astro-MD*",
-			"permited": "Hii ${tname} Bro*\n\nNow You are permitted by my owner to pm now.\n\n *Powered by Astro-MD", 
-			"revoked" : "*Hii ${tname} Bro*\n\nYour pm permit permission has been prevoked now.\n\n _Powered by Astro-MD_",
-			"demote": "Uhh,Admin Role Taken back",
-			"antlink": "Link Detected.\n*Good Bye Bro*",
-			"session": "\n*This is your session.sam.json,keep it safe and store it properly*\n_Now Upload This json file in Your Forked Repo_\n Connect your repo to Heroku and *Deploy Branch* and Bot will run for Always\n\n*Powered by Astro-MD*",
-			"mention": " Please mention any user Bro",
-			"title": "Astro-MD",
-			"footer": "Astro-MD",
-			"by": "Made by: *CitelVoid*",
-			"chat_desc": "Options Avilable* : 1. mute\n2. unmute\n3. archive\n4. unarchive\n5. read\n6. unread\n7. delete",
-			"success": "Done ✓",
-			"dot": "Did you mean *help?*",
-			"couple_male": "*I dont want to die alone,I want a female yaar*",
-			"couple_female": "*I dont want to die alone,I want a male yaar*",
-			"admin": "𝑇ℎ𝑖𝑠 𝑐𝑜𝑚𝑚𝑎𝑛𝑑 𝑖𝑠 𝑜𝑛𝑙𝑦 𝑓𝑜𝑟 𝑔𝑟𝑜𝑢𝑝 𝐴𝑑𝑚𝑖𝑛⚠️!",
-			"botAdmin": "𝑃𝑙𝑒𝑎𝑠𝑒 𝑃𝑟𝑜𝑣𝑖𝑑𝑒 𝑚𝑒 𝐴𝑑𝑚𝑖𝑛 𝑅𝑜𝑙𝑒 𝑆𝑖𝑟.❗",
-			"owner": "𝐓𝐡𝐢𝐬 𝐂𝐨𝐦𝐦𝐚𝐧𝐝 𝐢𝐬 𝐨𝐧𝐥𝐲 𝐟𝐨𝐫 𝐌𝐲 𝐎𝐰𝐧𝐞𝐫 ⚠️",
-			"group": "𝑻𝒉𝒊𝒔 𝑭𝒆𝒂𝒕𝒖𝒓𝒆 𝒊𝒔 𝑶𝒏𝒍𝒚 𝑭𝒐𝒓 𝑮𝒓𝒐𝒖𝒑𝒔❗",
-			"private": "𝑻𝒉𝒊𝒔 𝒇𝒆𝒂𝒕𝒖𝒓𝒆 𝒊𝒏 𝒐𝒏𝒍𝒚 𝒇𝒐𝒓 𝒕𝒉𝒆 𝐌𝐲 𝐎𝐰𝐧𝐞𝐫 ⚠️",
-			"bot": "𝑻𝒉𝒊𝒔 𝒇𝒆𝒂𝒕𝒖𝒓𝒆 𝒊𝒏 𝒐𝒏𝒍𝒚 𝒇𝒐𝒓 𝒕𝒉𝒆 𝒃𝒐𝒕 𝒏𝒖𝒎𝒃𝒆𝒓⚠️",
-			"wait": "𝑷𝒓𝒐𝒄𝒆𝒔𝒔𝒊𝒏𝒈 𝒚𝒐𝒖𝒓 𝒓𝒆𝒒𝒖𝒆𝒔𝒕✅" 
+			"greet2" : "برو",
+			"pic1": "https://i.ibb.co/wYrskH3/IMG-20220927-WA0009.jpg",
+			"pic2": "https://i.ibb.co/wYrskH3/IMG-20220927-WA0009.jpg",
+			"pic3": "https://i.ibb.co/wYrskH3/IMG-20220927-WA0009.jpg",
+			"pic4": "https://i.ibb.co/wYrskH3/IMG-20220927-WA0009.jpg",
+			"pic5": "https://i.ibb.co/wYrskH3/IMG-20220927-WA0009.jpg",
+			"pic6": "https://i.ibb.co/wYrskH3/IMG-20220927-WA0009.jpg",
+			"pic7": "https://i.ibb.co/wYrskH3/IMG-20220927-WA0009.jpg",
+			 "greet" : "برو",
+		   "dotbody" : "انا موجود.",
+			"promote": "الدور الإداري الممنوح إلى حبيبي",
+			"pmallow": "*هلا,معك بوت رايلي*\n*ايش تشته نساعدك😊.*\nسيدي مشغول الآن.\nيرجى ترك رسالتك.\n\n_سوف أبلغه عن رسالتك في أسرع وقت ممكن......_",
+			"pmblock": "❌ ممنوع*\n\n لقد تم حظرك بسبب الرسائل غير المرغوب فيها.\n\n _ ♣️《بوت رايلي》♦️_",
+			"pmwarn": "✋يييي* \nمن فضلك لا ترسل رسائل غير مرغوب فيها وسأمنعك من إرسال الرسائل غير المرغوب فيها. _لديك ${checkPermit.times} تحذير(s)._\n\n *♣️《بوت رايلي》♦️*",
+			"permited": "هلا ${tname} برو*\n\nالآن سمح لك مالك بلدي مساء الآن.\n\n *♣️《بوت رايلي》♦️", 
+			"revoked" : "*هلا بيك ${tname} يا برو*\n\nلقد تم إلغاء إذن تصريح رئيس الوزراء الخاص بك الآن.\n\n _♣️《بوت رايلي》♦️_",
+			"demote": "اه,تم استعادة الدور الإداري",
+			"antlink": "تم اكتشاف رابط🚫.\n*مقلع ولا عا ازيد ابصرك*",
+			"session": "\n*هذه هي جلستك.sam.json,keep أنها آمنة وتخزينها بشكل صحيح*\n_الآن قم بتحميل ملف json هذا في Forked Repo الخاص بك_\n قم بتوصيل الريبو الخاص بك بـ Heroku و *فرع النشر* وسيتم تشغيل البوت دائمًا\n\n*♣️《بوت رايلي》♦️*",
+			"mention": " يرجى ذكر أي مستخدم يا برو",
+			"title": "《رايــ♧ــلـي》",
+			"footer": "♣️《بوت رايلي》♦️",
+			"by": "مصنوع من طرف : *رايلي*",
+			"chat_desc": "خيارات متاحه* : 1. كتم الصوت\n2. غير مكتوم الصوت\n3. أرشيف\n4. غير مؤرشف\n5. قرأ\n6. غير مقروء\n7. حذف",
+			"success": "منتهي ✓",
+			"dot": "هل تعني *help?*",
+			"couple_male": "*لا أريد أن أموت وحدي ، أريد أنثى*",
+			"couple_female": "*لا أريد أن أموت وحدي ، أريد ذكرًا*",
+			"admin": "هذا الأمر مخصص فقط لمسؤول المجموعة ، هذا الأمر فقط من أجل⚠️!",
+			"botAdmin": "من فضلك زودني بدور المشرف يا شاطر.❗",
+			"owner": "هذا الأمر هو فقط للمالك ⚠️",
+			"group": "هذه الميزة للمجموعات فقط❗",
+			"private": "هذه الميزة فقط للمالك ⚠️",
+			"bot": "هذه الميزة لرقم البوت⚠️",
+			"wait": "معالجة طلبك✅" 
 		},
 		"error": {
-			"text": "*Uhh,Got an Error*"
+			"text": "*ااه,حصلت على خطأ*"
 		}
 	}
   }
